Spacing fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,6 +67,7 @@ main {
     grid-column: 2 / 3;
     margin: 0 0 1rem 0;
     max-width: var(--max-content-width);
+    padding-left: 1rem;
 }
 
 aside {
